@@ -4,5 +4,6 @@ include README.rst
 recursive-include examples *.py *.jpg *.npy *.npz
 recursive-include docs *.py *.md *.txt *.rst *.bib
 recursive-include tests *.py *.md *.zip *.h5
+recursive-exclude qpsphere/resources *.bin *.exe *.dll
 prune docs/_build
 exclude docs/_version_save.py
