@@ -42,3 +42,9 @@ test_script:
   - coverage report -m
   - codecov
 
+after_test:
+  - python setup.py bdist_wheel
+
+artifacts:
+  # Archive the generated wheel package in the ci.appveyor.com build report.
+  - path: dist\*
