@@ -1,4 +1,5 @@
 0.1.4
+ - add methods to handle third party binaries (#3)
  - implemented `ret_qpi` for edge detection in `analyze`
 0.1.3
  - added 2D phase fitting algorithm (method='image')
